--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
   <title>Document</title>
 </head>
 <body>
-  <script type="module" src="../test/add.js"></script>
+  <!-- <script type="module" src="../test/add.js"></script> -->
+  <!-- <script type="module" src="../test/after.js"></script> -->
+  <script type="module" src="../test/chunk.js"></script>
 </body>
 </html>
