--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
 <body>
   <!-- <script type="module" src="../test/add.js"></script> -->
   <!-- <script type="module" src="../test/after.js"></script> -->
-  <script type="module" src="../test/chunk.js"></script>
+  <!-- <script type="module" src="../test/chunk.js"></script> -->
+  <!-- <script type="module" src="../test/compact.js"></script> -->
+  <script type="module" src="../test/head.js"></script>
 </body>
 </html>
